--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #footer {
   background-color: #444;
   color: #aaa;
-  font-size: 8pt;
+  font-size: 12pt;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
@@ -197,6 +197,13 @@ nav h1 a {
   float: right;
   margin: 20px;
   width: 10%;
+}
+.highight {
+  color: orange;
+}
+.review-box-x {
+  float: right;
+  padding-right: 5px;
 }
 
 /* ====================== Restaurant Details ====================== */
